--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,11 @@
-== README
+ruby 2.3.1
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+rails 4.2.6
 
-Things you may want to cover:
+db mysql
 
-* Ruby version
+deploy:
 
-* System dependencies
+rvm use 2.3.1
 
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+rails s
