--- a/README.rdoc
+++ b/README.rdoc
@@ -9,3 +9,6 @@ deploy:
 rvm use 2.3.1
 
 rails s
+ 1,009
+ 1
+"The practical consequence […is…] for the first time, a way for one Internet user to transfer a unique piece of digital property to another Internet user, such that the transfer is guaranteed to be safe and secure, everyone knows that the transfer has taken place, and nobody can challenge the legitimacy of the transfer. The consequences of this breakthrough are hard to overstate."
